se agrego la funcion de generar un token para luego poder cambiar la contraseña
