# src/controllers/auth.js
@@ -1,6 +1,8 @@
-import {Users} from "../models/";
 import bcrypt from "bcrypt";
+import {Users, ResetTokens} from "../models/";
 import {generateJWT} from "../middlewares/jwt";
+import { v4 as uuidv4 } from "uuid";
+import moment from "moment";
 
 export const signUp = async (req, res) => {
 
@@ -60,3 +62,47 @@ export const login = async (req, res) => {
     }
 }
 
+export const resetPassword = async (req, res) => {
+
+    const {email} = req.body;
+     
+    try {
+
+        const results = await Users.findOne({where: {email: email}});
+
+        if(results){
+            
+            let token = uuidv4();
+            
+            let fechaActual = moment();
+            let fechaFinal = moment(fechaActual).add(1, 'day');
+            let expirationDate = moment(fechaFinal).format("yyyy-MM-D, h:mm");
+
+            let resetTokenObj = {
+                token,
+                expirationDate,
+                userId: results.id,
+                active: true
+            }
+
+            const data = await ResetTokens.create(resetTokenObj);
+
+            res.status(200).json(
+                {
+                    message: "peticion exitosa",
+                    data
+                }
+            )
+        }else{
+            res.status(400).json({
+                message: "No se encontró el usuario"
+            })
+        }
+
+    } catch (error) {
+        res.status(400).json({
+            message: "No se ha podido completar la solicitud"
+        })
+    }
+    
+}
